stateDiagram-v2
    direction TB

    state "pending" as pending
    state "diproses" as diproses
    state "selesai" as selesai

    [*] --> pending : SubmitKeluhan [Foto <= 2MB]<br>/ Notifikasi WA Admin

    pending --> diproses : MulaiProses<br>/ Jadwalkan Penanganan
    pending --> selesai : SelesaikanLangsung<br>[Tanggapan Diisi]<br>/ Kirim WA Solusi

    diproses --> selesai : KonfirmasiSelesai<br>[Tanggapan Diisi]<br>/ Kirim WA Solusi

    selesai --> diproses : ReopenTiket<br>[Belum Tuntas]<br>/ Buka Tiket

    selesai --> [*] : ArsipKeluhan<br>/ Riwayat Disimpan
